完成专题展示页面

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -100,4 +100,35 @@ a.emphasis{
   }
 }
 
+.lv0{
+  color: rgb(204,204,204) !important;
+}
+
+.lv1{
+  color: rgb(0,255,125) !important;
+}
+
+.lv2{
+  color: rgb(180,150,255) !important;
+}
+
+.lv3{
+  color: rgb(255,68,253) !important;
+}
+
+.lv4{
+  color: rgb(255,207,131) !important;
+}
+
+.lv5{
+  color: rgb(255,0,0) !important;
+}
+
+.lv6{
+  color: rgb(187,0,0) !important;
+}
+
+.root{
+  color: black !important;
+}
 
